--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -3,7 +3,10 @@
  
   
   <title>JoinUrSpheres Rooms</title>
-   <link rel="stylesheet" href="joinurspheres.css">
+  <link rel="stylesheet" href="../css/landing.css" />
+<link rel="shortcut icon" href="../images/Favicon-01.ico" />
+        <link rel="apple-touch-icon" href="../images/Favicon-01.ico" />
+
   <style>
     /* Optional: Add some CSS to style the tags */
     .tag {
@@ -14,7 +17,7 @@
     }
   </style>
 </head>
-<body>
+<body class="is-boxed has-animations">
 
   <h1>Available Rooms</h1>
   <h2>keep in mind upon joining the room link it will ask for description and room limit just put anything only if you are joining a room not creating it!</h2>
@@ -22,6 +25,73 @@
     <input type="text" id="searchBar" placeholder="Search for rooms..." onkeyup="searchRooms()">
   </div>
 
+
+ <div class="body-wrap landing main">
+            <main>
+                <section class="hero-logo">
+                    <a class="logo" href="/">
+                        <img class="header-logo-image" src="../images/imageedit_11_9100596704.png" alt="featlytalk-webrtc-logo" />
+
+                    </a>
+                    <a class="logo" href="/">
+                        <img class="header-logo-image" src="../images/cooltext441173494358215.gif" alt="featlytalk-webrtc-logo" />
+
+                    </a>
+                </section>
+                <section class="hero">
+                    <div class="hero-inner">
+                        <div class="hero-copy">
+                            <h1 class="hero-title mt-0">
+                                Chatspheres - Explore Topics, Engage Minds: Your Journey Begins at Chatspheres
+                            </h1>
+                            <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make sphere</button>
+                         <a class = "button-make-feat" href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
+
+                        </div>
+<div class="hero-main-image">
+
+<!-- New images go here -->
+</div>
+                      
+
+                      </section>
+                            
+                        </div>
+                    </div>
+                </section>
+                <section class="hero-term-info">
+                    <p>By starting to use the chatspheres service, you agree to the <a href="/terms">Terms of Use</a></p>
+                    <span>© 2023 chatspheres Inc., all rights reserved</span>
+                </section>
+            </main>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
   
   <div id="room-list">
   </div>
