--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -44,10 +44,18 @@
                             <h1 class="hero-title mt-0">
                                 Chatspheres - Explore Topics, Engage Minds: Your Journey Begins at Chatspheres
                             </h1>
-                            <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make sphere</button>
-                         <a class = "button-make-feat" href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
+                            
 
                         </div>
+
+<h1>Available Rooms</h1>
+  <h2>keep in mind upon joining the room link it will ask for description and room limit just put anything only if you are joining a room not creating it!</h2>
+<div>
+    <input type="text" id="searchBar" placeholder="Search for rooms..." onkeyup="searchRooms()">
+  </div>
+
+
+                     
 <div class="hero-main-image">
 
 <!-- New images go here -->
