--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -63,9 +63,8 @@
                         </div>
                     </div>
                 </section>
-                <section class="hero-term-info">
-                    <p>By starting to use the chatspheres service, you agree to the <a href="/terms">Terms of Use</a></p>
-                    <span>© 2023 chatspheres Inc., all rights reserved</span>
+                <section class="blah">
+                    
                 </section>
             </main>
         </div>
