--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -69,7 +69,7 @@ a:hover {
     text-align: center;
     padding: 20px;
     color: #333; /* Feel free to change this to match your site's color scheme */
-    background-color: #f4f4f4; /* This provides a subtle background to set the section apart; adjust as needed */
+    background-color: #00BFFF; /* This provides a subtle background to set the section apart; adjust as needed */
     margin: 20px auto; /* Adds some margin to separate the section from others */
     max-width: 800px; /* Controls the width of the content */
 }
