--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -33,7 +33,7 @@
 
                         </div>
 
-<h1>Available Rooms</h1>
+<h1>Available Rooms Click a Circle To Join Rooms Others Create</h1>
   <h2>keep in mind upon joining the room link it will ask for description and room limit just put anything only if you are joining a room not creating it!</h2>
 <div>
     <input type="text" id="searchBar" placeholder="Search for rooms..." onkeyup="searchRooms()">
