--- a/public/views/newroom.html
+++ b/public/views/newroom.html
@@ -13,6 +13,20 @@
 
             gtag('config', 'G-QDQNY8YQ4T');
         </script>
+        <script>
+            //added
+window.onload = function() {
+    const url = new URL(window.location.href);
+    const pathSegments = url.pathname.split('/');
+    const roomId = pathSegments[pathSegments.length - 1];
+    
+    if (pathSegments.includes('join') && roomId) {
+        window.location.href = '/join/' + roomId;
+    }
+}
+
+            //added
+        </script>
 
         <!-- Title and Icon -->
 
