--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -161,19 +161,7 @@
                 
 
    <script>
-       //added also added id inviteForm thats all i changed here newly i think
-     window.onload = function() {
-    initClient(); // Call this first if it's needed for initialization
-    checkFields(); // Then check the fields
-
-    const urlParams = new URLSearchParams(window.location.search);
-    const invite = urlParams.get('invite');
-
-    // If the invite parameter is set to "true", hide the form
-    if (invite === 'true') {
-        document.getElementById('inviteForm').style.display = 'none';
-    }
-};
+      
 
        //added
 
@@ -1144,7 +1132,20 @@ function joinRoom(roomId) {
             </main>
         </section>
 
+<script>
+window.onload = function() {
+    initClient(); // Call this first if it's needed for initialization
+    checkFields(); // Then check the fields
 
+    const urlParams = new URLSearchParams(window.location.search);
+    const room = urlParams.get('room'); // Get the 'room' parameter from the URL
+
+    // If the 'room' parameter is present, hide the form
+    if (room) {
+        document.getElementById('inviteForm').style.display = 'none';
+    }
+};
+</script>
 
 
         
