--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -1134,6 +1134,12 @@ function joinRoom(roomId) {
 
 <script>
 
+window.onload = function() {
+    initClient(); // Call this first if it's needed for initialization
+    checkFields(); // Then check the fields
+
+};
+
 
 
 
